--- a/index.html
+++ b/index.html
@@ -9,12 +9,8 @@
 		<h1>Hola mundo</h1>
 
 		<p>Texto prueba</p>
-		<ul>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-			<li></li>
-		</ul>
+		<!-- <img src="./img/mariposa.jpg" alt="">
+		<img src="/mari.jpg" alt=""> -->
+		<img src="https://www.picoseuropa.net/pais-vasco/bilbao/puesta-sol-bilbao-pais-vasco-3070013-digi-23.jpg" alt="">
 	</body>
 </html>
