--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Titulo</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="styles.css" />
 	</head>
 	<body>
 		<h1>Hola mundo</h1>
@@ -11,6 +18,9 @@
 		<p>Texto prueba</p>
 		<!-- <img src="./img/mariposa.jpg" alt="">
 		<img src="/mari.jpg" alt=""> -->
-		<img src="https://www.picoseuropa.net/pais-vasco/bilbao/puesta-sol-bilbao-pais-vasco-3070013-digi-23.jpg" alt="">
+		<img
+			src="https://www.picoseuropa.net/pais-vasco/bilbao/puesta-sol-bilbao-pais-vasco-3070013-digi-23.jpg"
+			alt=""
+		/>
 	</body>
 </html>
